tests/NormalTests/paczka1/fuzzy1/32504540.err
Error in line 8: wuQZ9oQST A694 55,3
Error in line 20: Et15nV A694 37,0
Error in line 23: R0py290Ckw A839 26,3
Error in line 34: A839 A621 38,3
